@@ -6,5 +6,5 @@ Lock=asim-platforms
 Description=Description of platforms
 Name=platforms
 Tag=HEAD
-CSN=CSN-platforms-500
+CSN=CSN-platforms-501
 Dependencies=hasim/HEAD
